[package]
name = "blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
rocket = "0.5.0-rc.1"
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["tera"]}
tera = "1.15.0"
tracing = "0.1.29"
